Bug 364777 - The importer filtering accounts enhancement forget credit cards/liabilities accounts
Summary: The importer filtering accounts enhancement forget credit cards/liabilities a...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-06-26 10:56 UTC by Pierre
Modified: 2019-08-29 01:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1,5.0.0
Sentry Crash Report:


Attachments
Missing Liability Account (129.92 KB, image/jpeg)
2016-06-26 15:15 UTC, Pierre
Details
Anonymized Credit Card CSV (449 bytes, text/csv)
2016-06-26 18:37 UTC, Pierre
Details
Anonymized Credit Card QIF (254 bytes, application/octet-stream)
2016-06-26 18:37 UTC, Pierre
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pierre 2016-06-26 10:56:01 UTC
Hello,

Import QIF or CSV does not allow to select Credit Card account (set as Liability account) in order to import to it. This seems to be due to below enhancement.

Liability accounts should still be usable for imports, otherwise how we import Credit Card transactions on a Liability account ?


(source: https://kmymoney.org/changelogs/ChangeLog-4.8.0.txt)
commit bfa7b5ac37d2203e4a88d9ac73b1ec43ce5211b4
Author: Åukasz WojniÅ‚owicz <lukasz.wojnilowicz@gmail.com>
Date:   Sat May 28 19:59:22 2016 +0200

    Present only right accounts during import of statements
    
    During import of investment statement user is asked to select account
    into which he wants to import. He should choose investment account, but
    he is also presented with all other sorts of accounts. This patch makes
    sure that user is presented only with the right account types.
    
    FEATURE: 363069
    REVIEW: 127915
    
    Signed-off-by: Åukasz WojniÅ‚owicz <lukasz.wojnilowicz@gmail.com>

Reproducible: Always

Steps to Reproduce:
1. Select <File>/<Open>
2. Then <QIF> or <CSV>
3. Select file to import
4. Next screen shows only Current accounts (no liability accounts)

Actual Results:  
Only current accounts are available.

Expected Results:  
Liability accounts should be available too.
Comment 1 wojnilowicz 2016-06-26 12:24:31 UTC
(In reply to Pierre from comment #0)
> Hello,
> 
> Import QIF or CSV does not allow to select Credit Card account (set as
> Liability account) in order to import to it. This seems to be due to below
> enhancement.
> 
> Liability accounts should still be usable for imports, otherwise how we
> import Credit Card transactions on a Liability account ?
> 
> 
> (source: https://kmymoney.org/changelogs/ChangeLog-4.8.0.txt)
> commit bfa7b5ac37d2203e4a88d9ac73b1ec43ce5211b4
> Author: Åukasz WojniÅ‚owicz <lukasz.wojnilowicz@gmail.com>
> Date:   Sat May 28 19:59:22 2016 +0200
> 
>     Present only right accounts during import of statements
>     
>     During import of investment statement user is asked to select account
>     into which he wants to import. He should choose investment account, but
>     he is also presented with all other sorts of accounts. This patch makes
>     sure that user is presented only with the right account types.
>     
>     FEATURE: 363069
>     REVIEW: 127915
>     
>     Signed-off-by: Åukasz WojniÅ‚owicz <lukasz.wojnilowicz@gmail.com>
> 
> Reproducible: Always
> 
> Steps to Reproduce:
> 1. Select <File>/<Open>
> 2. Then <QIF> or <CSV>
> 3. Select file to import
> 4. Next screen shows only Current accounts (no liability accounts)
> 
> Actual Results:  
> Only current accounts are available.
> 
> Expected Results:  
> Liability accounts should be available too.

Hello,
there is no problem with CSV imports of credit cards in KMM > 4.8. What do you try to import actually: CSV or QIF?
Comment 2 Pierre 2016-06-26 15:15:41 UTC
Created attachment 99702 [details]
Missing Liability Account
Comment 3 Pierre 2016-06-26 15:18:40 UTC
(In reply to NSLW from comment #1)
> (In reply to Pierre from comment #0)
> > Hello,
> > 
> > Import QIF or CSV does not allow to select Credit Card account (set as
> > Liability account) in order to import to it. This seems to be due to below
> > enhancement.
> > 
> > Liability accounts should still be usable for imports, otherwise how we
> > import Credit Card transactions on a Liability account ?
> > 
> > 
> > (source: https://kmymoney.org/changelogs/ChangeLog-4.8.0.txt)
> > commit bfa7b5ac37d2203e4a88d9ac73b1ec43ce5211b4
> > Author: Åukasz WojniÅ‚owicz <lukasz.wojnilowicz@gmail.com>
> > Date:   Sat May 28 19:59:22 2016 +0200
> > 
> >     Present only right accounts during import of statements
> >     
> >     During import of investment statement user is asked to select account
> >     into which he wants to import. He should choose investment account, but
> >     he is also presented with all other sorts of accounts. This patch makes
> >     sure that user is presented only with the right account types.
> >     
> >     FEATURE: 363069
> >     REVIEW: 127915
> >     
> >     Signed-off-by: Åukasz WojniÅ‚owicz <lukasz.wojnilowicz@gmail.com>
> > 
> > Reproducible: Always
> > 
> > Steps to Reproduce:
> > 1. Select <File>/<Open>
> > 2. Then <QIF> or <CSV>
> > 3. Select file to import
> > 4. Next screen shows only Current accounts (no liability accounts)
> > 
> > Actual Results:  
> > Only current accounts are available.
> > 
> > Expected Results:  
> > Liability accounts should be available too.
> 
> Hello,
> there is no problem with CSV imports of credit cards in KMM > 4.8. What do
> you try to import actually: CSV or QIF?

I added a screenshot showing that "Liability Account" is missing in the list of available accounts.
The list is only showing "Current Accounts", the Credit Card account (in "Liability Account" category) is not showing in the Import Wizard. (Import is working fine with Current Accounts, tested with QIF and CSV and OFX)
Comment 4 wojnilowicz 2016-06-26 15:45:57 UTC
Ok, I suppose you don't use master branch version (please choose your KMM version in header of this bug).
How come you've got three files: QIF, OFX, CSV; do you somehow convert between them?
Could you attach anonymized QIF or OFX file which shows that problem?

I wonder why your "Account selection" dialog shows "Current" under "Account Type", when you try to import credit card. There was similar problem with CSV imports showing always "Checking" under "Account Type" but it was changed to "Unknown", so all account types could be showed (see bug #364425 if interested).
Comment 5 Pierre 2016-06-26 18:37:28 UTC
Created attachment 99704 [details]
Anonymized Credit Card CSV
Comment 6 Pierre 2016-06-26 18:37:52 UTC
Created attachment 99705 [details]
Anonymized Credit Card QIF
Comment 7 Pierre 2016-06-26 18:47:12 UTC
I cannot select the version I am using as not available in the KMM versions drop down list.
I'm using the official 4.8.0-2 version (installed from Manjaro community repository).

I got these CSV and QIF from my credit card website provider. I do not use any converters.
The OFX I used is for my Current accounts (different from Credit Card provider).

Anonymized Credit Card CSV and QIF attached.

I indeed noticed in the Import Wizard, in the "Account Selection" step, the "Account Type" defaults ALWAYS to "Current". Maybe this "defaulting" is the root cause of the Liability Accounts disposition from the available accounts list (located on the same step "Account Selection").

The unsolicited account types "filtering" behaviour seems again described as an enhancement as per https://kmymoney.org/changelogs/ChangeLog-4.8.0.txt / commit bfa7b5ac37d2203e4a88d9ac73b1ec43ce5211b4
Comment 8 wojnilowicz 2016-06-26 19:04:15 UTC
Thanks for the files. As I wrote before, CSV should be already fixed in upcoming KMM 4.8.1.

Something is wrong with QIF importer in KMM, because file has correct type "!Type:CCard" and its account type is being incorrectly recognized. That needs to be fixed.

As temporary fix you can use workaround provided by Allan Anderson
https://mail.kde.org/pipermail/kmymoney-devel/2016-June/016810.html
Comment 9 Pierre 2016-06-26 20:44:25 UTC
Great ! Thank you for the workaround and your fast feedback.
Comment 10 wojnilowicz 2016-07-02 12:50:32 UTC
Git commit aabb1b8e917a3245a849d456d8e5e0bd5b2ee09a by Łukasz Wojniłowicz.
Committed on 02/07/2016 at 12:49.
Pushed by wojnilowicz into branch '4.8'.

Set type of QIF statement according to account type stored

M  +20   -2    kmymoney/converter/mymoneyqifreader.cpp

http://commits.kde.org/kmymoney/aabb1b8e917a3245a849d456d8e5e0bd5b2ee09a
Comment 11 wojnilowicz 2016-07-02 12:53:12 UTC
Git commit 5e883c11a3ef5001c67ceb680701dbc4bb97ce95 by Łukasz Wojniłowicz.
Committed on 02/07/2016 at 12:52.
Pushed by wojnilowicz into branch 'master'.

Set type of QIF statement according to account type stored

M  +20   -2    kmymoney/converter/mymoneyqifreader.cpp

http://commits.kde.org/kmymoney/5e883c11a3ef5001c67ceb680701dbc4bb97ce95