Set type of QIF statement according to account type stored

BUG: 364777